--- a/package.json
+++ b/package.json
@@ -5,22 +5,15 @@
   "scripts": {
     "build": "gulp"
   },
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xs314/Friends.git"
-  },
-  "license": "ISC",
   "dependencies": {
     "delete": "^1.1.0",
     "gulp": "^4.0.2",
-    "gulp-html-minifier-terser": "^6.0.1",
+    "gulp-html-minifier-terser": "^7.0.0-beta.0",
     "gulp-if": "^3.0.0",
     "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^8.0.0",
     "gulp-yaml": "^2.0.4",
     "imagemin-pngquant": "^9.0.2",
-    "imagemin-webp": "^7.0.0",
-    "js-yaml": "^4.1.0"
+    "imagemin-webp": "^7.0.0"
   }
 }
